# athlete-training-analytics

./: .gitignore  Makefile  README.md  dbt_project.yml  docker-compose.yml  main.py  package-lock.yml  packages.yml  pyproject.toml
dlt-pipeline/: athlete_pipeline.py  intervals_api.yaml  pipeline.py
kestra/: 01_gcp_kv.yml  02_gcp_setup.yml  03_check_kv_values.yml  04_upload_activities.yml  05_run_dlt_pipeline.yml
macros/: calculate_trimp.sql  get_activity_category.sql
models/marts/: dim_activity_type.sql  dim_athlete.sql  dim_date.sql  fct_activities.sql  fct_marts.yml
models/marts/reporting/: rpt_training_by_type.sql  rpt_weekly_training.sql
models/staging/: sources.yml  stg_activities.sql
notebooks/: gcp.py
terraform/: main.tf  variables.tf
