[project]
name = "athlete-training-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "dlt[duckdb,workspace]>=1.24.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.2.2",
]
